--- a/NEWS
+++ b/NEWS
@@ -68,6 +68,8 @@ NEWS/ChangeLog for hydroTSM
 	o 'dwi'             : -) new 'dwi.zoo', much faster than before
 			      -) it works with xts objects as well.
 			      -) fixed documentation of the 'out.unit' argument.
+			      -) argument 'tstep' is not required any more, because it is not used any longer.
+			         It is kept for backwards compatibility purposes only.
 	o Some 'as.Date' calls were changed to 'zoo:ad.Date', in order to work properly with zoo >= 1.7-2
 	
 
