updated 'matrixplot.R', which is now compatible with zoo matrixes/data.frames

--- a/NEWS
+++ b/NEWS
@@ -71,6 +71,7 @@ NEWS/ChangeLog for hydroTSM
 			      -) argument 'tstep' is not required any more, because it is not used any longer.
 			         It is kept for backwards compatibility purposes only.
         o 'extractzoo'      : -) new 'extractzoo.zoo'
+        o 'matrixplot       : -) it works with zoo objects as well (zoo matrixes/data.frames)
 	o Some 'as.Date' calls were changed to 'zoo:ad.Date', in order to work properly with zoo >= 1.7-2
 	
 
