name of 'extractzoo' was changed to 'extract', and that is reflected now in all the related .Rd files

--- a/NEWS
+++ b/NEWS
@@ -70,7 +70,10 @@ NEWS/ChangeLog for hydroTSM
 			      -) fixed documentation of the 'out.unit' argument.
 			      -) argument 'tstep' is not required any more, because it is not used any longer.
 			         It is kept for backwards compatibility purposes only.
-        o 'extractzoo'      : -) new 'extractzoo.zoo'
+        o 'extractzoo'      : -) its name was changed from 'extractzoo' to 'extract', in order to have a 
+			         shorter name (this function only apply to zoo objects anyway). 
+			         The old 'extractzoo' function is deprecated, but still be kept for back-compatibility reasons.			
+			      -) new 'extract.zoo'
         o 'matrixplot       : -) it works with zoo objects as well (zoo matrixes/data.frames)
 	o Some 'as.Date' calls were changed to 'zoo:ad.Date', in order to work properly with zoo >= 1.7-2
 	
