--- a/NEWS
+++ b/NEWS
@@ -2,7 +2,6 @@ NEWS/ChangeLog for hydroTSM
 --------------------------
 
 0.3-0	(under development)
-	o TODO: replace 'drawxaxis' by 'drawTimeAxis' in all the package
 	o TODO: check line 60 in 'drawxaxis', for argument gt=1. ( suppressWarnings(axTicksByTime(x, ticks.on=lab.tstep, gt=1)) )
 	o NAMESPACE created, which leads to reduced dependency of the packages  e1071, gstat, automap, sp; 
 	  while maptools was moved to 'Suggests'
@@ -53,8 +52,6 @@ NEWS/ChangeLog for hydroTSM
 	o 'fdc' and 'fdcu'  : -) new argument 'xat', for setting the position of the 'x' axis labels when 'log="x"'
 	o 'time2season'     : -) new argument 'type', for allowing seasons different from 
 	                         c("DJF", "MAM", "JJA", "SON") (thanks to Lydie Sichoix !)
-	o 'extractzoo'      : -) argument 'trgt' now allows weather seasons typical from 
-	                         French Polynesia: c("DJFM", "AM", "JJAS", "ON") (thanks to Lydie Sichoix !)
 	o 'dm2seasonal'     : -) new argument 'out.fmt', for better compatibility with zoo and xts objects.
 	                      -) it works with matrix objects as well.
 	                      -) it works with xts objects as well.
@@ -64,16 +61,18 @@ NEWS/ChangeLog for hydroTSM
 			      -) it works with matrix objects as well.
 	                      -) it works with xts objects as well.
 	                      -) new argument 'type', for allowing weather seasons different from 
-	                         c("DJF", "MAM", "JJA", "SON") (thanks to Lydie Sichoix !)
+	                         c("DJF", "MAM", "JJA", "SON") (thanks to Lydie Sichoix !)	
+        o 'extractzoo'      : -) its name was changed from 'extractzoo' to 'extract', in order to have a 
+			         shorter name (this function only apply to zoo objects anyway). 
+			         The old 'extractzoo' function is deprecated, but still be kept for back-compatibility reasons.			
+			      -) new 'extract.zoo'
+			      -) argument 'trgt' now allows weather seasons typical from 
+	                         French Polynesia: c("DJFM", "AM", "JJAS", "ON") (thanks to Lydie Sichoix !)
 	o 'dwi'             : -) new 'dwi.zoo', much faster than before
 			      -) it works with xts objects as well.
 			      -) fixed documentation of the 'out.unit' argument.
 			      -) argument 'tstep' is not required any more, because it is not used any longer.
 			         It is kept for backwards compatibility purposes only.
-        o 'extractzoo'      : -) its name was changed from 'extractzoo' to 'extract', in order to have a 
-			         shorter name (this function only apply to zoo objects anyway). 
-			         The old 'extractzoo' function is deprecated, but still be kept for back-compatibility reasons.			
-			      -) new 'extract.zoo'
         o 'matrixplot       : -) it works with zoo objects as well (zoo matrixes/data.frames)
 	o Some 'as.Date' calls were changed to 'zoo:ad.Date', in order to work properly with zoo >= 1.7-2
 	
