--- a/NEWS
+++ b/NEWS
@@ -75,6 +75,8 @@ NEWS/ChangeLog for hydroTSM
 			      -) argument 'tstep' is not required any more, because it is not used any longer.
 			         It is kept for backwards compatibility purposes only.
         o 'matrixplot       : -) it works with zoo objects as well (zoo matrixes/data.frames)
+        o 'izoo2rzoo'       : -) new 'izoo2rzoo.zoo'
+                              -) it works with xts objects as well. 					      
 	o Some 'as.Date' calls were changed to 'zoo:ad.Date', in order to work properly with zoo >= 1.7-2
 	
 
