--- a/inst/doc/hydroTSM_Vignette.Rnw
+++ b/inst/doc/hydroTSM_Vignette.Rnw
@@ -76,7 +76,7 @@ smry(x)
 @
 
 
-\item Using the \textit{hydroplot} function, which (by default) plots 9 different graphs: 3 ts plots, 3 boxplots and 3 histograms summarizing 'x' (for this example, only daily and monthly plots are produced). Only data starting from 01-Jan-1987 are plotted.
+\item Using the \textit{hydroplot} function, which (by default) plots 9 different graphs: 3 ts plots, 3 boxplots and 3 histograms summarizing 'x'. For this example, only daily and monthly plots are produced, and only data starting from 01-Jan-1987 are plotted.
 
 \begin{center}
 <<fig=TRUE, pdf=TRUE, eps=FALSE, width=10, height=8>>=
@@ -121,12 +121,12 @@ matrixplot(M, ColorRamp="Precipitation",
 
 \begin{enumerate}
 
-\item Annual Values
+\item Annual values of precipitation
 <<>>=
 daily2annual(x, FUN=sum, na.rm=TRUE)
 @
 
-\item Average Annual Precipitation
+\item Average annual precipitation
 
 Obvious way:
 
