--- a/NEWS
+++ b/NEWS
@@ -1,10 +1,13 @@
 NEWS/ChangeLog for hydroTSM
 --------------------------
 
+
 0.3-1	(under/future development)
 	o TODO: check line 60 in 'drawxaxis', for argument gt=1. ( suppressWarnings(axTicksByTime(x, ticks.on=lab.tstep, gt=1)) )
 	
-0.3-0	01-Sep-2011 (expected...)
+	
+0.3-0	01-Sep-2011
+
 	o hydroTSM now depends on xts >= 0.8-2 (=> zoo >= 1.7-2), in order to make use of improved plotting capabilities for ts objects.
 	  The first release of 'xts' after the 0.8-0 (which was set as the default building block for plotting time series in hydroTSM) 
 	  was the 0.8-2, and appeared on CRAN on August 9th, 2011	
