--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,9 @@
 NEWS/ChangeLog for hydroTSM
 --------------------------
 
-	
+0.3-2	15-Sep-2011
+        o 'smry' : bugfix in 'smry.zoo' (when some values were NA)
+        	
 0.3-1	14-Sep-2011
         o hydroTSM 0.3-X is now compatible with R 2.12.X.
           'sp::coordinates' & 'sp::proj4string' were replaced by 'coordinates' & 'proj4string', respectively. Thanks to Uwe Ligges.
