fdc.matrix: fixed 'ylim' issue when x has missing values

--- a/NEWS
+++ b/NEWS
@@ -2,8 +2,8 @@ NEWS/ChangeLog for hydroTSM
 --------------------------
 
 0.3-3	Under development
-        o 'fdc.matrix'     : axis numbers and labels are now drawn only once.
-          'fdc.data.frame' 
+        o 'fdc.matrix'     : -) axis numbers and labels are now drawn only once.
+          'fdc.data.frame'   -) when missing 'ylim', it is now correctly computed when some series has missing values.
         
 0.3-2	15-Sep-2011
         o 'smry' : bugfix in 'smry.zoo' (when some values were NA)
