--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,7 @@
 NEWS/ChangeLog for hydroTSM
 --------------------------
 
-0.3-3	Under development
+0.3-3	07-Nov-2011
         o new 'fdc.zoo', which works with vectors, matrixes and/or data frames
         o 'fdc.matrix'     : -) the flow duration curve of each column is now returned as an output (although not in an efficient way, yet)
           'fdc.data.frame'   -) axis numbers and labels are now drawn only once.
