--- a/NEWS
+++ b/NEWS
@@ -11,6 +11,9 @@ NEWS/ChangeLog for hydroTSM
                                        (thanks to Jan Schwanbeck for reporting the issue and proposing a solution) 
         o 'daily2monthly.data.frame' : -) calls to 'as.Date' were changed to 'zoo::as.Date', in order to work properly with zoo >= 1.7-2
                                        -) wrong labelling of months was fixed (only occurred when out.type="db")
+        o 'sfreq'                    : -) now gives the correct sampling frequency for zoo objects that are matrix/data.frame
+                                       -) now only works with zoo objects (before it also accepted ts objects)
+                                       
         
 0.3-4	03-May-2012
         o 'fdc' : new arguments 'leg.cex' and 'leg.pos' to provide better control over the legend
