--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,7 @@
 NEWS/ChangeLog for hydroTSM
 --------------------------
 
-0.3-5	XX-May-2012
+0.3-5	04-Jul-2012
         o 'dwi.zoo'                  : fixed display error for years and months when 'matrixplot' is used to plot the results of 'dwi' applied 
                                        to a matrix or data.frame.
                                        This error appeared after an update of the zoo package, and did not imply any error in the computation, 
@@ -21,6 +21,7 @@ NEWS/ChangeLog for hydroTSM
         o 'monthlyfunction'          : -) calls to 'as.Date' were changed to 'zoo::as.Date', to avoid possible conflicts with zoo >= 1.7-2 
                                           (only for data.frame/matrix objects)
                                        -) fixed bug in the labelling of columns of the output object (only for data.frame/matrix objects)
+        o 'hydrokrige'               : -) fixed visualisation error "Error using packet 1. 'breaks' are not unique".
                                        
         
 0.3-4	03-May-2012
