izoo2rzoo.R: now it is sub-daily capable

--- a/NEWS
+++ b/NEWS
@@ -1,9 +1,11 @@
 NEWS/ChangeLog for hydroTSM
 --------------------------
 
-0.3-6	XX-Jul-2012
+0.3-6	XX-Oct-2012 (under-development)
         o 'vector2zoo' : -) now it handles sub-daily values 
-                         -) 'dates' argument accepts 'POSIXct' objects
+                         -) 'dates' argument accepts 'POSIXct' & 'POSIXlt' objects
+        o 'izoo2rzoo'  : -) now it handles sub-daily values 
+                         -) 'dates' argument accepts 'POSIXct' & 'POSIXlt' objects
         o 'hydrokrige' : fixed interpolation error raised for some constant value maps.
 
 0.3-5	04-Jul-2012
